tests/ui/resolve/typo-suggestion-for-variable-with-name-similar-to-struct-field.stderr
error[E0425]: cannot find value `config` in this scope
  --> $DIR/typo-suggestion-for-variable-with-name-similar-to-struct-field.rs:7:16
   |
LL |     config: String,
   |     ------ a field by that name exists in `Self`
...
LL |         Self { config }
   |                ^^^^^^ help: a local variable with a similar name exists: `cofig`

error[E0425]: cannot find value `config` in this scope
  --> $DIR/typo-suggestion-for-variable-with-name-similar-to-struct-field.rs:11:20
   |
LL |     config: String,
   |     ------ a field by that name exists in `Self`
...
LL |         println!("{config}");
   |                    ^^^^^^ help: a local variable with a similar name exists: `cofig`

error[E0425]: cannot find value `config` in this scope
  --> $DIR/typo-suggestion-for-variable-with-name-similar-to-struct-field.rs:15:20
   |
LL |         println!("{config}");
   |                    ^^^^^^ help: a local variable with a similar name exists: `cofig`
   |
   = help: you might have meant to use the available field in a format string: `"{}", self.config`

error[E0425]: cannot find value `bah` in this scope
  --> $DIR/typo-suggestion-for-variable-with-name-similar-to-struct-field.rs:33:9
   |
LL |         bah;
   |         ^^^
...
LL | fn ba() {}
   | ------- similarly named function `ba` defined here
   |
help: you might have meant to refer to the associated function
   |
LL |         Self::bah;
   |         ++++++
help: a function with a similar name exists
   |
LL -         bah;
LL +         ba;
   |

error[E0425]: cannot find value `BAR` in this scope
  --> $DIR/typo-suggestion-for-variable-with-name-similar-to-struct-field.rs:35:9
   |
LL |         BAR;
   |         ^^^
...
LL | const BARR: u32 = 3;
   | -------------------- similarly named constant `BARR` defined here
   |
help: you might have meant to use the associated `const`
   |
LL |         Self::BAR;
   |         ++++++
help: a constant with a similar name exists
   |
LL |         BARR;
   |            +

error[E0412]: cannot find type `Baz` in this scope
  --> $DIR/typo-suggestion-for-variable-with-name-similar-to-struct-field.rs:37:18
   |
LL |         let foo: Baz = "".to_string();
   |                  ^^^
...
LL | type Bar = String;
   | ------------------ similarly named type alias `Bar` defined here
   |
help: you might have meant to use the associated type
   |
LL |         let foo: Self::Baz = "".to_string();
   |                  ++++++
help: a type alias with a similar name exists
   |
LL -         let foo: Baz = "".to_string();
LL +         let foo: Bar = "".to_string();
   |

error[E0425]: cannot find function `baz` in this scope
  --> $DIR/typo-suggestion-for-variable-with-name-similar-to-struct-field.rs:31:9
   |
LL |         baz();
   |         ^^^
...
LL | fn ba() {}
   | ------- similarly named function `ba` defined here
   |
help: you might have meant to call the method
   |
LL |         self.baz();
   |         +++++
help: a function with a similar name exists
   |
LL -         baz();
LL +         ba();
   |

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0412, E0425.
For more information about an error, try `rustc --explain E0412`.
